tests/error/enum_declared.gw
#! [contains] already been defined
int i;
enum i
{
  test
}
